Added more instructions

--- a/meson.build
+++ b/meson.build
@@ -3,9 +3,24 @@ project('BasicEmulator', 'cpp',
   default_options : ['warning_level=3',
                      'cpp_std=c++17'])
 
+
+gtest_proj = subproject('gtest')
+gtest = gtest_proj.get_variable('gtest_dep')
+gmock = gtest_proj.get_variable('gmock_dep')
+
+
 SOURCES = []
+TESTS = []
+INCDIR = include_directories('include')
+DEPS = [
+  dependency('spdlog'),
+  gtest,
+  gmock
+]
+
 subdir('src')
 
-exe = executable('basicemulator', SOURCES, include_directories: include_directories('include'), dependencies: [dependency('spdlog')])
+exe = executable('basicemulator', SOURCES, include_directories: INCDIR, dependencies: DEPS)
 
-test('basic', exe)
+tests_exe = executable('emu_tests',SOURCES, TESTS, dependencies: DEPS, include_directories: INCDIR)
+test('Emulation Test', tests_exe)
