--- a/src/meson.build
+++ b/src/meson.build
@@ -1,4 +1,4 @@
-SOURCES += files('main.cpp', 'cpu.cpp', 'ram.cpp', 'instructions.cpp')
+SOURCES += files('main.cpp', 'cpu.cpp', 'ram.cpp', 'instructions.cpp', 'addressing_modes.cpp')
 
 subdir('tests')
 subdir('graphics')
